# wasm-functions

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/: dependabot.yml
.github/workflows/: chart_release.yaml  chart_test.yaml  charts_main.yaml  image.yml  main.yml  pr.yml  release.yml
chart/wasm-function-runtime/: Chart.yaml  values.schema.json  values.yaml
chart/wasm-function-runtime/templates/: NOTES.txt  _helpers.tpl  database.secret.yaml  deployment.yaml  general.config.yaml  hpa.yaml  ingress.yaml  oidc.config.yaml  redis.secret.yaml  service.yaml  serviceaccount.yaml  storage-azure.config.yaml  storage-azure.secret.yaml  storage-hetzner.config.yaml  storage-hetzner.secret.yaml  storage-minio.config.yaml  storage-minio.secret.yaml
chart/wasm-function-runtime/templates/tests/: test-connection.yaml
entity/: Cargo.toml  README.md
entity/src/: http_function.rs  lib.rs  prelude.rs  scheduled_function.rs  scope.rs  secret.rs  service.rs  variable.rs
examples/wasm-function-hello/: Cargo.toml  manifest.toml
examples/wasm-function-hello/src/: bindings.rs  lib.rs
examples/wasm-function-hello/wit/: world.wit
examples/wasm-function-html/: Cargo.toml  README.md  manifest.toml
examples/wasm-function-html/src/: bindings.rs  index.html  lib.rs
examples/wasm-function-http/: Cargo.toml  README.md  manifest.toml
examples/wasm-function-http/src/: bindings.rs  lib.rs
examples/wasm-function-http/wit/: world.wit
examples/wasm-function-scheduled/: Cargo.toml  manifest.toml
examples/wasm-function-scheduled/src/: bindings.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250301_171208_services.rs
wasm-function-cli/: Cargo.toml
wasm-function-cli/src/: config.rs  cred_store.rs  main.rs
wasm-function-cli/src/auth/: login.rs  mod.rs  model.rs  token_refresh.rs
wasm-function-cli/src/commands/: command_context.rs  command_executor.rs  deploy.rs  login.rs  logout.rs  mod.rs
wasm-function-cli/src/commands/function/: delete.rs  list.rs  mod.rs
wasm-function-cli/src/commands/scope/: delete.rs  list.rs  mod.rs
wasm-function-cli/src/commands/variable/: add.rs  delete.rs  edit.rs  list.rs  mod.rs
wasm-function-hello/: Cargo.toml
wasm-function-hello/src/: bindings.rs
wasm-function-http/: Cargo.toml
wasm-function-http/src/: bindings.rs  lib.rs
wasm-function-http/wit/: world.wit
wasm-function-runtime/: Cargo.toml
wasm-function-runtime/src/: bindings.rs  main.rs  server_state.rs  startup.rs  utils.rs
wasm-function-runtime/src/cache/: cache_backend.rs  error.rs  local_cache.rs  mod.rs  redis_cache.rs
wasm-function-runtime/src/component/: http.rs  mod.rs  scheduled.rs
wasm-function-runtime/src/config/: mod.rs
wasm-function-runtime/src/db/: mod.rs
wasm-function-runtime/src/domain/: function.rs  manifest.rs  mod.rs  scope.rs  secret.rs  service.rs  variable.rs
wasm-function-runtime/src/function_cache/: function_cache_backend.rs  local_function_cache.rs  mod.rs
wasm-function-runtime/src/handlers/: api_handler.rs  function_handler.rs  healthz_handler.rs  mod.rs
wasm-function-runtime/src/handlers/api_handler/: deploy_handler.rs  function_handler.rs  mod.rs  scope_handler.rs  variable_handler.rs
wasm-function-runtime/src/middlewares/: auth.rs  request_id.rs
wasm-function-runtime/src/routes/: mod.rs
wasm-function-runtime/src/scheduler/: function_scheduler.rs  mod.rs  state.rs
wasm-function-runtime/src/services/: errors.rs  function_service.rs  mod.rs  scope_service.rs  service_registry.rs  service_service.rs  variable_service.rs  wasm_cache_service.rs  wasm_file_service.rs
wasm-function-runtime/src/storage/: cached_storage.rs  errors.rs  file_system.rs  general_s3.rs  mod.rs  storage_backend.rs
wasm-function-sdk/: Cargo.toml
wasm-function-sdk/src/: blocking.rs  future.rs  lib.rs
wasm-function-sdk/wit-scheduled/: scheduled.wit
