[workspace]
members = [
    "wasm-function-runtime",
    "wasm-function-cli",
    "migration",
    "entity",
    "examples/*",
]
resolver = "2"

[profile.release]
lto = true

[profile.release.package.wasm-function-http]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.wasm-function-html]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.wasm-function-hello]
codegen-units = 1
opt-level = "s"
debug = false
strip = true

[profile.release.package.wasm-function-scheduled]
codegen-units = 1
opt-level = "s"
debug = false
strip = true