[package]
name = "wasm-function-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
dotenv = "0.15.0"
indicatif = "0.17.9"
miette = { version = "7.4.0", features = ["fancy"] }
open = "5.3.1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
    "multipart",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
spinner = "0.5.0"
