[package]
name = "wasm-function-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
dotenv = "0.15.0"
indicatif = "0.17.9"
miette = { version = "7.5.0", features = ["fancy"] }
open = "5.3.2"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
    "multipart",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
spinner = "0.5.0"
tabled = "0.18.0"
