[package]
name = "wasm-function-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "compression-gzip",
    "request-id",
    "util",
    "catch-panic",
    "normalize-path",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
wasmtime = { version = "29.0.1", features = [
    "runtime",
    "component-model",
    "cranelift",
] }
wasmtime-wasi = "29.0.1"
sea-orm = { version = "1.1.8", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
] }
migration = { path = "../migration" }
entity = { path = "../entity" }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
http = "1.3.1"
moka = { version = "0.12.10", features = ["future"] }
wasmtime-wasi-http = "29.0.1"
tower = "0.5.2"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
] }
strum = { version = "0.27.1", features = ["derive"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["tracing-subscriber"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
highway = "1.3.0"
sha2 = "0.10.8"
hex = "0.4.3"
object_store = { version = "0.12.0", features = ["aws", "azure"] }
redis = { version = "0.29.5", features = ["connection-manager", "tokio-comp"] }
