[package]
name = "wasm-function-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-function-sdk = { path = "../../wasm-function-sdk", features = [
    "scheduled",
    "blocking",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-function-hello"

[package.metadata.component.dependencies]
