[package]
name = "wasm-function-html"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-function-sdk = { path = "../../wasm-function-sdk", features = [
    "blocking",
    "http",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wasm-function-html"

[package.metadata.component.dependencies]
