[package]
name = "wasm-function-http"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
waki = { version = "0.5.1", features = ["json"] }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]


[package.metadata.component]
package = "jontze:wasm-function-http"

[package.metadata.component.dependencies]
