[package]
name = "wasm-function-http"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
waki = { version = "0.5.1", features = ["json"] }
wasm-function-sdk = { path = "../../wasm-function-sdk", features = [
    "blocking",
    "http",
] }

[lib]
crate-type = ["cdylib"]


[package.metadata.component]
package = "jontze:wasm-function-http"

[package.metadata.component.dependencies]
