[package]
name = "wasm-function-scheduled"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "jontze:function-scheduled"

[package.metadata.component.dependencies]
