[package]
name = "wasm-function-scheduled"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-function-sdk = { path = "../../wasm-function-sdk", features = [
    "blocking",
    "scheduled",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "jontze:function-scheduled"

[package.metadata.component.dependencies]
